--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Journal-->
         <scene sceneID="nAX-Lb-eRY">
             <objects>
-                <tableViewController id="LfR-S2-cfA" sceneMemberID="viewController">
+                <tableViewController id="LfR-S2-cfA" customClass="JournalsTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="N7a-JL-GTm">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -85,10 +85,10 @@
             </objects>
             <point key="canvasLocation" x="-44" y="67"/>
         </scene>
-        <!--View Controller-->
+        <!--Journal Detail View Controller-->
         <scene sceneID="Jq3-Zf-Jo6">
             <objects>
-                <viewController id="jYz-0f-C2P" sceneMemberID="viewController">
+                <viewController id="jYz-0f-C2P" customClass="JournalDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0q6-xi-Kf7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
