--- a/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
+++ b/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
@@ -85,17 +85,51 @@
             </objects>
             <point key="canvasLocation" x="817.39130434782612" y="206.91964285714286"/>
         </scene>
-        <!--View Controller-->
+        <!--Entry Detail View Controller-->
         <scene sceneID="Dsc-Ug-1wX">
             <objects>
-                <viewController id="qs4-F4-feC" sceneMemberID="viewController">
+                <viewController id="qs4-F4-feC" customClass="EntryDetailViewController" customModule="MyJournal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WGd-L0-r6U">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2W2-jU-Sz6">
+                                <rect key="frame" x="20" y="160" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8LD-rR-ja7">
+                                <rect key="frame" x="20" y="214" width="374" height="628"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="8LD-rR-ja7" firstAttribute="leading" secondItem="Y59-dH-be0" secondAttribute="leading" constant="20" id="3Bs-eS-tLh"/>
+                            <constraint firstItem="Y59-dH-be0" firstAttribute="trailing" secondItem="8LD-rR-ja7" secondAttribute="trailing" constant="20" id="DAQ-Sk-Hyq"/>
+                            <constraint firstItem="Y59-dH-be0" firstAttribute="trailing" secondItem="2W2-jU-Sz6" secondAttribute="trailing" constant="20" id="RXU-2H-hYE"/>
+                            <constraint firstItem="Y59-dH-be0" firstAttribute="bottom" secondItem="8LD-rR-ja7" secondAttribute="bottom" constant="20" id="T1e-mX-agM"/>
+                            <constraint firstItem="8LD-rR-ja7" firstAttribute="top" secondItem="2W2-jU-Sz6" secondAttribute="bottom" constant="20" id="hjs-aa-rJ1"/>
+                            <constraint firstItem="2W2-jU-Sz6" firstAttribute="leading" secondItem="Y59-dH-be0" secondAttribute="leading" constant="20" id="n11-ec-vhG"/>
+                            <constraint firstItem="2W2-jU-Sz6" firstAttribute="top" secondItem="Y59-dH-be0" secondAttribute="top" constant="20" id="r7L-B6-CRD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Y59-dH-be0"/>
                     </view>
-                    <navigationItem key="navigationItem" id="6J0-xo-Cwo"/>
+                    <navigationItem key="navigationItem" id="6J0-xo-Cwo">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="lRg-Jt-6Ql">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="qs4-F4-feC" id="hjJ-qr-nlf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="notesTextView" destination="8LD-rR-ja7" id="Ejm-pO-PdG"/>
+                        <outlet property="saveButton" destination="lRg-Jt-6Ql" id="9MZ-kS-hcg"/>
+                        <outlet property="titleTextField" destination="2W2-jU-Sz6" id="iLn-W3-cso"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yNH-TM-BuA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
